Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13049

Querying INFORMATION_SCHEMA becomes slow in MariaDB 10.1

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.1.19, 10.1.24, 10.1(EOL), 10.2(EOL)
    • 10.1.29, 10.2.10, 10.3.3
    • Admin statements
    • None
    • 10.2.10

    Description

      Querying INFORMATION_SCHEMA repeatedly using CentOS 6 becomes slow in MariaDB 10.1 (10.1.19, 10.1.24).

      With a basic table, and simple repeated SELECT from I_S, on CentOS 6, thus far, we see a slowdown. It remains sub-second from my testing on Windows, even up to 2K iterations.

      I will provide the CREATE TABLE and test case in a private comment.

      Here are a sample of times from 10.1.19 (compared to times on MySQL 5.5 and 5.6) on CentOS 6.8:

      MariaDB 10.1.19
      real 0m16.970s
      user 0m2.804s
      sys 0m0.303s
       
      MySQL 5.6.16
      real 0m11.291s
      user 0m2.331s
      sys 0m0.280s
       
      MySQL 5.5.36
      real 0m7.246s
      user 0m2.349s
      sys 0m0.277s
      

      And here are times from Elena (10.1.24 on CentOS 6.2) using test case provided:

      real    0m4.699s
      user    0m1.641s
      sys     0m2.590s
      

      This latter one is faster than the first one, but still not sub-second.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            ccalender Chris Calender (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.